[project]
name = "comfyui-motiondiff"
description = ""
version = "1.0.0"
license = "LICENSE"
dependencies = ["ftfy", "regex", "tqdm", "scipy", "matplotlib", "git+https://github.com/openai/CLIP.git", "addict", "yapf", "smplx", "h5py", "opencv-python", "einops", "pyrender", "trimesh", "shapely", "mapbox_earcut", "#mgpt", "spacy", "bert-score", "omegaconf", "huggingface_hub", "pytorch_lightning", "rich", "#4dhuman", "yacs", "scikit-image", "timm", "webdataset", "dill", "pandas"]

[project.urls]
Repository = "https://github.com/Fannovel16/ComfyUI-MotionDiff"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-MotionDiff"
Icon = ""
Models = [{location = "/checkpoints/model.safetensor", model_url = "https://example.com/model.zip"}]
