[project]
name = "comfyui-motiondiff"
description = "Implementation of 4DHuman, MDM, MotionDiffuse and ReMoDiffuse into ComfyUI."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["ftfy", "regex", "tqdm", "scipy", "matplotlib", "git+https://github.com/openai/CLIP.git", "addict", "yapf", "smplx", "h5py", "opencv-python", "einops", "pyrender", "trimesh", "shapely", "mapbox_earcut", "#mgpt", "spacy", "bert-score", "omegaconf", "huggingface_hub", "pytorch_lightning", "rich", "#4dhuman", "yacs", "scikit-image", "timm", "webdataset", "dill", "pandas"]

[project.urls]
Repository = "https://github.com/Fannovel16/ComfyUI-MotionDiff"

[tool.comfy]
PublisherId = "fannovel16"
DisplayName = "ComfyUI-MotionDiff"
Icon = ""
